@@ -29,7 +29,7 @@
 					Franciska Schulze &lt;fschulze at schulze-mueller.de&gt;
 				</li>
 				<li>
-					Tobias Schwinger &lt;tschwinger@isonews2.com&gt;
+					Tobias Schwinger &lt;tschwinger at isonews2.com&gt;
 				</li>
 			</ul>
 		</blockquote>
